@@ -1,0 +1,34 @@
+/**
+ * Copyright(c)2013,zhangchunsheng,www.zhangchunsheng.com.cn
+ * Version: 1.0
+ * Author: zhangchunsheng
+ * Date: 2014-03-13
+ * Description: makeHtml
+ * Modification:
+ *      甲午年（马年）农历二月十三
+ *          MakeHtml
+ */
+function MakeHtml(opts) {
+    
+};
+
+/**
+ * addEventListener
+ */
+MakeHtml.prototype.addEventListener = function(name, callback) {
+    
+};
+
+/**
+ * show
+ */
+MakeHtml.prototype.show = function() {
+    
+};
+
+/**
+ * hide
+ */
+MakeHtml.prototype.hide = function() {
+    
+};
