@@ -56,6 +56,9 @@
 [shenglong-electricv_1.0.0.1 2014-03-08 张春生]
 1.重构：调整内容加载方式，使用setHtml方法
 
+[shenglong-electricv_1.0.0.1 2014-03-13 张春生]
+1.重构：创建模版文件
+
 --备注分类
 1、新功能：
 2、Bug:
